--- a/TravelClaimsApp/AndroidManifest.xml
+++ b/TravelClaimsApp/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cmputw15t15.travelclaimsapp"
     android:versionCode="1"
@@ -12,6 +13,26 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <activity
+            android:name="com.cmputw15t15.travelclaimsapp.MainMenuActivity"
+            android:label="@string/title_activity_main_menu" >
+        </activity>
+        <activity
+            android:name="com.cmputw15t15.travelclaimsapp.AddClaimActivity"
+            android:label="@string/title_activity_add_claim" >
+        </activity>
+        <activity
+            android:name="com.cmputw15t15.travelclaimsapp.EditClaimActivity"
+            android:label="@string/title_activity_edit_claim" >
+        </activity>
+        <activity
+            android:name="com.cmputw15t15.travelclaimsapp.EditExpenseActivity"
+            android:label="@string/title_activity_edit_expense" >
+        </activity>
+        <activity
+            android:name="com.cmputw15t15.travelclaimsapp.ApproverActivity"
+            android:label="@string/title_activity_approver" >
+        </activity>
     </application>
 
 </manifest>
