--- a/TravelClaimsApp/AndroidManifest.xml
+++ b/TravelClaimsApp/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cmputw15t15.travelclaimsapp"
+    package="com.cmput301w15t15.travelclaimsapp"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,23 +14,23 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.cmputw15t15.travelclaimsapp.MainMenuActivity"
+            android:name="com.cmput301w15t15.travelclaimsapp.MainMenuActivity"
             android:label="@string/title_activity_main_menu" >
         </activity>
         <activity
-            android:name="com.cmputw15t15.travelclaimsapp.AddClaimActivity"
+            android:name="com.cmput301w15t15.travelclaimsapp.AddClaimActivity"
             android:label="@string/title_activity_add_claim" >
         </activity>
         <activity
-            android:name="com.cmputw15t15.travelclaimsapp.EditClaimActivity"
+            android:name="com.cmput301w15t15.travelclaimsapp.EditClaimActivity"
             android:label="@string/title_activity_edit_claim" >
         </activity>
         <activity
-            android:name="com.cmputw15t15.travelclaimsapp.EditExpenseActivity"
+            android:name="com.cmput301w15t15.travelclaimsapp.EditExpenseActivity"
             android:label="@string/title_activity_edit_expense" >
         </activity>
         <activity
-            android:name="com.cmputw15t15.travelclaimsapp.ApproverActivity"
+            android:name="com.cmput301w15t15.travelclaimsapp.ApproverActivity"
             android:label="@string/title_activity_approver" >
         </activity>
     </application>
