Added menu buttons to activity

--- a/TravelClaimsApp/AndroidManifest.xml
+++ b/TravelClaimsApp/AndroidManifest.xml
@@ -41,6 +41,10 @@
             android:name="com.cmput301w15t15.travelclaimsapp.activitys.CreateUserActivity"
             android:label="@string/title_activity_create_user" >
         </activity>
+        <activity
+            android:name="com.cmput301w15t15.travelclaimsapp.activitys.SearchActvity"
+            android:label="@string/title_activity_search_actvity" >
+        </activity>
     </application>
 
 </manifest>
