--- a/TravelClaimsApp/AndroidManifest.xml
+++ b/TravelClaimsApp/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:name="com.cmput301w15t15.travelclaimsapp.activitys.MainMenuActivity"
             android:label="@string/title_activity_main_menu" >
-            <intent-filter >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -49,6 +49,10 @@
         <activity
             android:name="com.cmput301w15t15.travelclaimsapp.activitys.SearchActvity"
             android:label="@string/title_activity_search_actvity" >
+        </activity>
+        <activity
+            android:name="com.cmput301w15t15.travelclaimsapp.activitys.ExpenseListActivity"
+            android:label="@string/title_activity_expense_list" >
         </activity>
     </application>
 
