--- a/TravelClaimsApp/AndroidManifest.xml
+++ b/TravelClaimsApp/AndroidManifest.xml
@@ -7,58 +7,62 @@
     <uses-sdk
         android:minSdkVersion="17"
         android:targetSdkVersion="17" />
-    
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name="com.cmput301w15t15.travelclaimsapp.activitys.MainMenuActivity"
-            android:label="@string/title_activity_main_menu" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="com.cmput301w15t15.travelclaimsapp.activitys.AddClaimActivity"
-            android:label="@string/title_activity_add_claim" >
-        </activity>
-        <activity
-            android:name="com.cmput301w15t15.travelclaimsapp.activitys.EditClaimActivity"
-            android:label="@string/title_activity_edit_claim" >
-        </activity>
-        <activity
-            android:name="com.cmput301w15t15.travelclaimsapp.activitys.EditExpenseActivity"
-            android:label="@string/title_activity_edit_expense" >
-        </activity>
-        <activity
-            android:name="com.cmput301w15t15.travelclaimsapp.activitys.ApproverActivity"
-            android:label="@string/title_activity_approver" >
-        </activity>
-        <activity
-            android:name="com.cmput301w15t15.travelclaimsapp.activitys.ExpenseListViewActivity"
-            android:label="@string/title_activity_expense_list_view" >
-        </activity>
-        <activity
-            android:name="com.cmput301w15t15.travelclaimsapp.activitys.CreateUserActivity"
-            android:label="@string/title_activity_create_user" >
-        </activity>
-        <activity
-            android:name="com.cmput301w15t15.travelclaimsapp.activitys.SearchActivity"
-            android:label="@string/title_activity_search_actvity" >
-        </activity>
-        <activity
-            android:name="com.cmput301w15t15.travelclaimsapp.activitys.ExpenseListActivity"
-            android:label="@string/title_activity_expense_list" >
-        </activity>
+	<application
+		android:allowBackup="true"
+		android:icon="@drawable/ic_launcher"
+		android:label="@string/app_name"
+		android:theme="@style/AppTheme" >
+    	<activity
+    	    android:name="com.cmput301w15t15.travelclaimsapp.activitys.WelcomeActivity"
+    	    android:label="@string/app_name" >
+    	    <intent-filter>
+    	        <action android:name="android.intent.action.MAIN" />
+
+    	        <category android:name="android.intent.category.LAUNCHER" />
+    	    </intent-filter>
+    	</activity>
+    	<activity
+    	    android:name="com.cmput301w15t15.travelclaimsapp.activitys.MainMenuActivity"
+    	    android:label="@string/title_activity_main_menu" >
+    	</activity>
+    	<activity
+    	    android:name="com.cmput301w15t15.travelclaimsapp.activitys.AddClaimActivity"
+    	    android:label="@string/title_activity_add_claim" >
+    	</activity>
+    	<activity
+    	    android:name="com.cmput301w15t15.travelclaimsapp.activitys.EditClaimActivity"
+    	    android:label="@string/title_activity_edit_claim" >
+    	</activity>
+    	<activity
+    	    android:name="com.cmput301w15t15.travelclaimsapp.activitys.EditExpenseActivity"
+    	    android:label="@string/title_activity_edit_expense" >
+    	</activity>
+    	<activity
+    	    android:name="com.cmput301w15t15.travelclaimsapp.activitys.ApproverActivity"
+    	    android:label="@string/title_activity_approver" >
+    	</activity>
+    	<activity
+    	    android:name="com.cmput301w15t15.travelclaimsapp.activitys.ExpenseListViewActivity"
+    	    android:label="@string/title_activity_expense_list_view" >
+    	</activity>
+    	<activity
+    	    android:name="com.cmput301w15t15.travelclaimsapp.activitys.CreateUserActivity"
+    	    android:label="@string/title_activity_create_user" >
+    	</activity>
+    	<activity
+    	    android:name="com.cmput301w15t15.travelclaimsapp.activitys.SearchActivity"
+    	    android:label="@string/title_activity_search_actvity" >
+    	</activity>
+    	<activity
+    	    android:name="com.cmput301w15t15.travelclaimsapp.activitys.ExpenseListActivity"
+    	    android:label="@string/title_activity_expense_list" >
+    	</activity>
     </application>
 
 </manifest>
