--- a/TravelClaimsApp/AndroidManifest.xml
+++ b/TravelClaimsApp/AndroidManifest.xml
@@ -7,12 +7,12 @@
     <uses-sdk
         android:minSdkVersion="17"
         android:targetSdkVersion="17" />
-    
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -34,6 +34,13 @@
         <activity
             android:name="com.cmput301w15t15.travelclaimsapp.activitys.EditClaimActivity"
             android:label="@string/title_activity_edit_claim" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <data android:scheme="geo" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
         <activity
             android:name="com.cmput301w15t15.travelclaimsapp.activitys.EditExpenseActivity"
@@ -58,6 +65,10 @@
         <activity
             android:name="com.cmput301w15t15.travelclaimsapp.activitys.ExpenseListActivity"
             android:label="@string/title_activity_expense_list" >
+        </activity>
+        <activity
+            android:name="com.cmput301w15t15.travelclaimsapp.activitys.MapActivity"
+            android:label="@string/title_activity_map" >
         </activity>
     </application>
 
