--- a/TravelClaimsApp/.classpath
+++ b/TravelClaimsApp/.classpath
@@ -7,7 +7,7 @@
 	<classpathentry kind="lib" path="libs/gson-2.3.1(1).jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="lib" path="/cshome/searn/Documents/TravelClaimsApp/TravelClaimsApp/libs/osmdroid-android-4.2.jar"/>
-	<classpathentry kind="lib" path="/cshome/searn/Documents/TravelClaimsApp/TravelClaimsApp/libs/slf4j-android-1.6.1-RC1.jar"/>
+	<classpathentry exported="true" kind="lib" path="/cshome/searn/Documents/TravelClaimsApp/TravelClaimsApp/libs/osmdroid-android-4.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="/cshome/searn/Documents/TravelClaimsApp/TravelClaimsApp/libs/slf4j-android-1.6.1-RC1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
