--- a/TravelClaimsApp/AndroidManifest.xml
+++ b/TravelClaimsApp/AndroidManifest.xml
@@ -19,13 +19,17 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.cmput301w15t15.travelclaimsapp.activitys.MainMenuActivity"
-            android:label="@string/title_activity_main_menu" >
+            android:name="com.cmput301w15t15.travelclaimsapp.activitys.WelcomeActivity"
+            android:label="@string/title_activity_welcome" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.cmput301w15t15.travelclaimsapp.activitys.MainMenuActivity"
+            android:label="@string/title_activity_main_menu" >
         </activity>
         <activity
             android:name="com.cmput301w15t15.travelclaimsapp.activitys.AddClaimActivity"
