--- a/TravelClaimsApp/AndroidManifest.xml
+++ b/TravelClaimsApp/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -75,6 +75,10 @@
         <activity
             android:name="com.cmput301w15t15.travelclaimsapp.activitys.MapActivity"
             android:label="@string/title_activity_map" >
+        </activity>
+        <activity
+            android:name="com.cmput301w15t15.travelclaimsapp.ApproverExpenseListActivity"
+            android:label="@string/title_activity_approver_expense_list" >
         </activity>
     </application>
 
