--- a/TravelClaimsApp/AndroidManifest.xml
+++ b/TravelClaimsApp/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.cmput301w15t15.travelclaimsapp.activitys.WelcomeActivity"
-            android:label="@string/title_activity_welcome" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
